tests/purs/failing/CoercibleRepresentational.out
Error found:
in module [33mMain[0m
at tests/purs/failing/CoercibleRepresentational.purs:11:20 - 11:26 (line 11, column 20 - line 11, column 26)

  No type class instance was found for
  [33m                          [0m
  [33m  Prim.Coerce.Coercible a1[0m
  [33m                        b3[0m
  [33m                          [0m

while solving type class constraint
[33m                                        [0m
[33m  Prim.Coerce.Coercible (Phantom @t0 a1)[0m
[33m                        (Phantom @t2 b3)[0m
[33m                                        [0m
while checking that type [33mforall (a :: Type) (b :: Type). Coercible @Type a b => a -> b[0m
  is at least as general as type [33mPhantom @t0 a1 -> Phantom @t2 b3[0m
while checking that expression [33mcoerce[0m
  has type [33mPhantom @t0 a1 -> Phantom @t2 b3[0m
in value declaration [33mphantomToPhantom[0m

where [33ma1[0m is a rigid type variable
        bound at (line 11, column 20 - line 11, column 26)
      [33mb3[0m is a rigid type variable
        bound at (line 11, column 20 - line 11, column 26)
      [33mt0[0m is an unknown type
      [33mt2[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

